--- a/ProgettoAssi V1/package.json
+++ b/ProgettoAssi V1/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "nodemailer": "^6.9.4",
     "pg": "^8.11.1"
   }
 }
