--- a/labpriv-main(1)/labpriv-main/ProgettoAssi V1/package.json
+++ b/labpriv-main(1)/labpriv-main/ProgettoAssi V1/package.json
@@ -6,6 +6,7 @@
     "express-session": "^1.17.3",
     "nodemailer": "^6.9.4",
     "pg": "^8.11.1",
-    "strapi-provider-email-nodemailer": "^3.6.11"
+    "strapi-provider-email-nodemailer": "^3.6.11",
+    "ws": "^8.13.0"
   }
 }
