--- a/.hintrc
+++ b/.hintrc
@@ -7,6 +7,9 @@
     "axe/text-alternatives": "off",
     "axe/name-role-value": "off",
     "axe/structure": "off",
-    "disown-opener": "off"
+    "disown-opener": "off",
+    "compat-api/css": "off",
+    "axe/language": "off",
+    "meta-charset-utf-8": "off"
   }
 }
