Non so cosa sia

--- a/labpriv-main(1)/labpriv-main/ProgettoAssi V1/package.json
+++ b/labpriv-main(1)/labpriv-main/ProgettoAssi V1/package.json
@@ -9,6 +9,7 @@
     "nodemailer": "^6.9.4",
     "pg": "^8.11.1",
     "strapi-provider-email-nodemailer": "^3.6.11",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
 }
