--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/package.json
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/package.json
@@ -7,6 +7,8 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.1",
     "strapi-provider-email-nodemailer": "^3.6.11",
     "ws": "^8.13.0"
